record-recorder/src/style.css
/* * {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  height: 100vh;
  width: 100vw;
  background-color: grey;
}

form {
  width: 25%;
  margin: auto;
  margin-top: 40px;
  padding: 40px;
  background-color: black;
  border-radius: 5px;
}

input {
  margin: auto;
}

button {
  margin-left: 20px;
  margin-bottom: 20px;
}

input[type="text"] {
  margin-bottom: 15px;
  height: 30px;
  text-indent: 10px;
  border: 1px solid #444;
  border-radius: 5px;
  display: block;
}

.header {
  display: flex;
  align-items: center;
  height: 65px;
  background: linear-gradient(90deg, #DB4B52 1.18%, #A626D3 100%);
  color: white;
  padding: 6px 30px 9px 30px;
}

.header--image {
  height: 100%;
  margin-right: 9px;
}

.header--title {
  font-size: 1.25rem;
  margin-right: auto;
}

.header--project {
  font-size: 0.75rem;
  font-weight: 500;
} */

/* hamburger */
.toggler {
  /* ALWAYS KEEPING THE TOGGLER OR THE CHECKBOX ON TOP OF EVERYTHING :  */
  z-index: 2;
  height: 50px;
  width: 50px;
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  opacity: 1;
}

.hamburger {
  position: absolute;
  top: 0;
  left: 0;
  height: 40px;
  width: 40px;
  padding: 0.6rem;

  /* FOR DISPLAYING EVERY ELEMENT IN THE CENTER : */

  display: flex;
  align-items: center;
  justify-content: center;
}

/* CREATING THE MIDDLE LINE OF THE HAMBURGER : */

.hamburger > div{
  position: relative;
  top: 0;
  left: 0;
  background: white;
  height: 2px;
  width: 60%;
  transition: all  0.4s ease;
}

/* CREATING THE TOP AND BOTTOM LINES : 
TOP AT -10PX ABOVE THE MIDDLE ONE AND BOTTOM ONE IS 10PX BELOW THE MIDDLE: */

.hamburger > div::before,
.hamburger > div::after{
  content: '';
  position: absolute;
  top: -10px;
  background: white;
  width: 100%;
  height: 2px;
  transition: all  0.4s ease;
}

.hamburger > div::after{
  top: 10px;
}

/* IF THE TOGGLER IS IN ITS CHECKED STATE, THEN SETTING THE BACKGROUND OF THE MIDDLE LAYER TO COMPLETE BLACK AND OPAQUE :  */

.toggler:checked+.hamburger>div {
  background: rgba(0, 0, 0, 0);
}

.toggler:checked+.hamburger>div::before {
  top: 0;
  transform: rotate(45deg);
  background: black;
}

/* AND ROTATING THE TOP AND BOTTOM LINES :  */

.toggler:checked+.hamburger>div::after {
  top: 0;
  transform: rotate(135deg);
  background: black;
}


/* MAIN MENU WITH THE WHITE BACKGROUND AND THE TEXT :  */

.menu {
  background: grey;
  width: 0%;
  height: 100vh;

  /* APPLYING TRANSITION TO THE MENU :  */

  transition: all 0.4s ease;
}

/* IF THE TOGGLER IS CHECKED, THEN INCREASE THE WIDTH OF THE MENU TO 30% , CREATING A SMOOTH EFFECT :  */

.toggler:checked~.menu {
  width: 30%;
}


/* STYLING THE LIST :  */

.menu>div>ul {
  display: flex;
  flex-direction: column;
  position: fixed;
  top: 70px;
  padding-left: 10px;

  /* HIDDEN INITIALLY  :  */

  visibility: hidden;
}

.menu>div>ul>li {
  list-style: none;
  padding: 0.5rem;
}

.menu>div>ul>li>a {
  color: black;
  text-decoration: none;
  font-size: 2rem;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* WHEN THE TOGGLER IS CHECKED, CHANGE THE VISIBILITY TO VISIBLE :  */

.toggler:checked~.menu>div>ul {
  transition: visibility 0.4s ease;
  transition-delay: 0.1s;
  visibility: visible;
}

.toggler:checked~.menu>div>ul>li>a:hover {
  color: orange;
}




/* For dropdown .select-dropdown {
  border-radius: 10px;
  width: 15%;
  background-color: #E6E6E6;
}
.select-dropdown select {
  font-size: 1rem;
  font-weight: normal;
  width: 100%;
  padding: 8px 24px 8px 10px;
  border: none;
  background-color: transparent;
    -webkit-appearance: none;
    -moz-appearance: none;
  appearance: none;
} */

/* .select-dropdown,
.select-dropdown * {
  margin-top: 0;
  padding: 0;
  position: relative;
  box-sizing: border-box;
}
.select-dropdown {
  position: relative;
  background-color: #E6E6E6;
  border-radius: 4px;
  width: 15%;
  margin-top: 15px;
  margin-left: 10px;
}

.select-dropdown select {
  font-size: 1rem;
  font-weight: normal;
  width: 100%;
  padding: 8px 24px 8px 10px;
  border: none;
  background-color: transparent;
    -webkit-appearance: none;
    -moz-appearance: none;
  appearance: none;
}

.select-dropdown select:active, .select-dropdown select:focus {
  outline: none;
  box-shadow: none;
}

.select-dropdown:after {
  content: "";
  position: absolute;
  top: 50%;
  right: 8px;
  width: 0;
  height: 0;
  margin-top: -2px;
  border-top: 5px solid #aaa;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
}  */

